Navbar and menus creation

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 body {
-  @apply bg-white h-full overflow-x-hidden;
+  @apply bg-background h-full overflow-x-hidden;
 }
 #__next {
   @apply h-full;
@@ -11,3 +11,5 @@ body {
 html {
   @apply h-full;
 }
+
+
